--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -34,19 +34,6 @@ nav{
     padding: 4% 12% 10px 12%;
 }
 
-
-.user_btn{
-    list-style-type: none;
-}
-
-.user_btn{
-    border-radius: 5px;
-}
-
-#ul_user a{
-    font-size:18px;
-}
-
 .p-bs{
     margin-left:4%;
 }
@@ -65,6 +52,17 @@ nav{
     color:#4764C3;
 }
 
+.user_btn{
+    list-style-type: none;
+}
+
+.user_btn{
+    border-radius: 5px;
+}
+
+#ul_user a{
+    font-size:18px;
+}
 
 #contact_btn{
     background-color:  #1c3988;
@@ -268,144 +266,35 @@ main{
     background-color:#6E8AE9;
 }
 
-/****************** ABOUT ******************/
+/**************************** CONTENT **************************/
 
-.about{
-    margin-top:13%;
-
+.messages{
+    grid-column: 1;
 }
 
-.about_img{
-
-    float:left;
+a{
+    text-decoration: none;
+    color:black;
 }
 
-.about_txt{
-    margin-right: -5%;
-    width:361px;
-    height:474px;
-    float:right;
-}
-
-.undr_zag{
-    font-weight:400;
-    font-size:17px;
-}
-
-
-/****************** OUR TEAM ******************/
-
-.cont_team{
-    margin-top: 8%;
-    display:flex;
-    align-items: center;
-}
-
-.team_card{
--webkit-box-shadow: 0px 0px 8px 1px rgba(34, 60, 80, 0.2);
--moz-box-shadow: 0px 0px 8px 1px rgba(34, 60, 80, 0.2);
-box-shadow: 0px 0px 8px 1px rgba(34, 60, 80, 0.2);
-width:400px;
-height:350px;
-text-align:center;
-padding-top:48px;
-padding-left:75px;
-padding-right:75px;
-}
-
-.name{
-    font-size:22px;
-    margin-top:26px;
-}
-
-.team_card2{
-    -webkit-box-shadow: 0px 0px 8px 1px rgba(34, 60, 80, 0.2);
-    -moz-box-shadow: 0px 0px 8px 1px rgba(34, 60, 80, 0.2);
-    box-shadow: 0px 0px 8px 1px rgba(34, 60, 80, 0.2);
-    width:400px;
-    height:350px;
-    text-align:center;
-    padding-top:48px;
-    padding-left:75px;
-    padding-right:75px;
-    margin-left:35px;
-    }
-    
-.name2{
-    font-size:22px;
-    margin-top:26px;
-}
-
-
-.udr_name{
-    font-weight:400;
-    font-size:17px;
-    margin-bottom:48px;
-}
-
-.about_team{
-    width:352px;
-    height:184px;
-    float:right;
-    margin-left:3%;
-}
-
-.undr_me{
-    font-weight:400;
-    font-size:22;
-}
-
-.about_img1{
-    border-radius:100%;
-    width:200px;
-    height:200px;
-}
-
-.about_img2{
-    border-radius:100%;
-    height:200px;
-    width:200px;
-}
-
-
-/****************** REVIEW******************/
-
-.review{
-    margin-top: 3%;
-    margin-bottom: 3%;
-}
-
-.review_cont1{
-    width:530px;
-    height:298px;
+.mes1{
     background-color: #F3F3FA;
-    /* margin-top:7%; */
 }
 
-.review_cont2{
-    width:530px;
-    height:298px;
-    background-color: #F3F3FA;
-    margin-left: 110%;
-    margin-top:-56%;
-}
 
-.review_text{
-    margin-left:2%;
-    padding-top:10%;
-}
 
-.review_desc{
-    margin-left:2%;
-    display:grid;
-    align-items: end;
-    margin-top:21px;
-    
-}
 
-.review_desc h1{
-    font-size:21px;
-}
+
+
+
+
+
+
+
+
+
+
+
 
 /**************************** FOOTER **************************/
 
